[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "kn_analytcs"
version = "0.0.1"
description = "Um sistema de an\u00e1lise de dados log\u00edsticos fict\u00edcio, mas estruturado como produ\u00e7\u00e3o real. Voc\u00ea vai construir do zero um pipeline de dados de uma opera\u00e7\u00e3o de warehouse, desde o banco at\u00e9 o dashboard executivo."
authors = [
  { name = "Vini_dev" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "==3.14.6"


[tool.ruff]
line-length = 99
src = ["kn_analytcs"]
include = ["pyproject.toml", "kn_analytcs/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["kn_analytcs"]
force-sort-within-sections = true

